--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -9,13 +9,13 @@ jobs:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: testdb
+          POSTGRES_USER: django
+          POSTGRES_PASSWORD: djangopass
+          POSTGRES_DB: mciq
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U postgres"
+          --health-cmd "pg_isready -U django"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -35,5 +35,5 @@ jobs:
 
       - name: Run tests
         env:
-          TEST_DB_URI: postgresql://postgres:postgres@localhost:5432/testdb
+          TEST_DB_URI: postgresql://postgres:postgres@100.82.40.3:5432/mciq
         run: pytest -q
