--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -32,6 +32,21 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install pytest psycopg2-binary sqlalchemy
+      - name: Run migrations
+        env:
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_HOST: ${{ secrets.DB_IP }}
+          POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+        run: python backend/manage.py migrate --noinput
+
 
       - name: Run tests
+        env:
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_HOST: ${{ secrets.DB_IP }}
+          POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
         run: pytest -q
